# geobane

./: .gitignore  CHANGELOG.md  LICENSE  README.md  TAXONOMY.md  pyproject.toml
.github/workflows/: tests.yml
geobane/: __init__.py  antimeridian.py  coordinate_order.py  crs_mismatch.py  degenerate.py  precision.py
geobane.egg-info/: SOURCES.txt  top_level.txt
tests/: test_antimeridian.py  test_coordinate_order.py  test_crs_mismatch.py  test_degenerate.py  test_precision.py
